--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,6 +60,32 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="editOrderPushButton">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>70</y>
+      <width>151</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>edit order</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>460</y>
+      <width>51</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ok</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -84,7 +110,14 @@
     </property>
     <addaction name="actionInfo"/>
    </widget>
+   <widget class="QMenu" name="menuWorkers">
+    <property name="title">
+     <string>workers</string>
+    </property>
+    <addaction name="actionAdd_worker"/>
+   </widget>
    <addaction name="menuMenu"/>
+   <addaction name="menuWorkers"/>
    <addaction name="menuAbout"/>
   </widget>
   <action name="actionAdd_order">
@@ -100,6 +133,11 @@
   <action name="actionInfo">
    <property name="text">
     <string>info</string>
+   </property>
+  </action>
+  <action name="actionAdd_worker">
+   <property name="text">
+    <string>add worker</string>
    </property>
   </action>
  </widget>
