--- a/authdialog.ui
+++ b/authdialog.ui
@@ -90,6 +90,11 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <tabstops>
+  <tabstop>enterButton</tabstop>
+  <tabstop>passwordLineEdit</tabstop>
+  <tabstop>loginLineEdit</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
