--- a/neworder.ui
+++ b/neworder.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>405</width>
-    <height>525</height>
+    <width>908</width>
+    <height>448</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="applyButton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>480</y>
+     <x>680</x>
+     <y>400</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="closeButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>480</y>
+     <x>780</x>
+     <y>400</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -42,7 +42,7 @@
   <widget class="QLineEdit" name="adressLineEdit">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>620</x>
      <y>10</y>
      <width>251</width>
      <height>27</height>
@@ -52,18 +52,18 @@
   <widget class="QTextEdit" name="orderTextEdit">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>40</y>
+     <x>620</x>
+     <y>47</y>
      <width>251</width>
-     <height>78</height>
+     <height>111</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="phoneLineEdit">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>120</y>
+     <x>620</x>
+     <y>160</y>
      <width>251</width>
      <height>27</height>
     </rect>
@@ -72,8 +72,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>50</y>
+     <x>540</x>
+     <y>60</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -85,7 +85,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>540</x>
      <y>10</y>
      <width>67</width>
      <height>17</height>
@@ -98,8 +98,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>120</y>
+     <x>540</x>
+     <y>160</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -111,8 +111,8 @@
   <widget class="QDateEdit" name="execDateEdit">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>190</y>
+     <x>620</x>
+     <y>230</y>
      <width>110</width>
      <height>27</height>
     </rect>
@@ -121,8 +121,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>190</y>
+     <x>540</x>
+     <y>230</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -134,8 +134,8 @@
   <widget class="QComboBox" name="workerComboBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>480</y>
+     <x>520</x>
+     <y>400</y>
      <width>131</width>
      <height>27</height>
     </rect>
@@ -144,8 +144,8 @@
   <widget class="QTimeEdit" name="timeEdit">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>240</y>
+     <x>540</x>
+     <y>280</y>
      <width>118</width>
      <height>27</height>
     </rect>
@@ -154,8 +154,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>240</y>
+     <x>500</x>
+     <y>280</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -167,8 +167,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>240</y>
+     <x>690</x>
+     <y>280</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -180,8 +180,8 @@
   <widget class="QTimeEdit" name="timeEdit2">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>240</y>
+     <x>710</x>
+     <y>280</y>
      <width>118</width>
      <height>27</height>
     </rect>
@@ -190,8 +190,8 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>320</y>
+     <x>550</x>
+     <y>360</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -203,8 +203,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>320</y>
+     <x>510</x>
+     <y>360</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -216,8 +216,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>160</y>
+     <x>540</x>
+     <y>200</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -229,11 +229,48 @@
   <widget class="QLineEdit" name="phone2lineEdit">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>150</y>
+     <x>620</x>
+     <y>190</y>
      <width>251</width>
      <height>27</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>10</y>
+     <width>361</width>
+     <height>421</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout"/>
+  </widget>
+  <widget class="QPushButton" name="plusPushButton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>+</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="minusPushButton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>-</string>
    </property>
   </widget>
  </widget>
