--- a/neworder.ui
+++ b/neworder.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>908</width>
-    <height>448</height>
+    <width>959</width>
+    <height>693</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -236,17 +236,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>10</y>
-     <width>361</width>
-     <height>421</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout"/>
-  </widget>
   <widget class="QPushButton" name="plusPushButton">
    <property name="geometry">
     <rect>
@@ -272,6 +261,17 @@
    <property name="text">
     <string>-</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="formLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>20</y>
+     <width>441</width>
+     <height>661</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout"/>
   </widget>
  </widget>
  <resources/>
