--- a/newcrmuser.ui
+++ b/newcrmuser.ui
@@ -124,6 +124,19 @@
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
+  <widget class="QCheckBox" name="activecheckBox">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>150</y>
+     <width>97</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>isActive</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
