--- a/newcrmuser.ui
+++ b/newcrmuser.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>485</width>
-    <height>221</height>
+    <width>535</width>
+    <height>356</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLineEdit" name="namelineEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>180</x>
      <y>20</y>
      <width>331</width>
      <height>27</height>
@@ -26,7 +26,7 @@
   <widget class="QLineEdit" name="loginlineEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>180</x>
      <y>50</y>
      <width>331</width>
      <height>27</height>
@@ -36,7 +36,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>90</x>
      <y>20</y>
      <width>67</width>
      <height>17</height>
@@ -49,7 +49,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>90</x>
      <y>50</y>
      <width>67</width>
      <height>17</height>
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>170</y>
+     <y>310</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -76,7 +76,7 @@
    <property name="geometry">
     <rect>
      <x>360</x>
-     <y>170</y>
+     <y>310</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>120</y>
+     <y>260</y>
      <width>97</width>
      <height>22</height>
     </rect>
@@ -101,7 +101,7 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>90</x>
      <y>80</y>
      <width>67</width>
      <height>17</height>
@@ -114,7 +114,7 @@
   <widget class="QLineEdit" name="passwordlineEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>180</x>
      <y>80</y>
      <width>331</width>
      <height>27</height>
@@ -128,13 +128,39 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>150</y>
+     <y>290</y>
      <width>97</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>isActive</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="paymentPasswordlineEdit">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>110</y>
+     <width>331</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>131</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>payment password:</string>
    </property>
   </widget>
  </widget>
