--- a/workers.ui
+++ b/workers.ui
@@ -16,14 +16,14 @@
   <widget class="QPushButton" name="addWorkerPushButton">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>380</x>
      <y>20</y>
-     <width>99</width>
+     <width>131</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
-    <string>add worker</string>
+    <string>добавить работника</string>
    </property>
   </widget>
   <widget class="QTableView" name="workersTableView">
